examples/contracts.salt
// =============================================================================
// Contracts — Formal Verification with Z3
// =============================================================================
// Demonstrates: requires(), ensures(), compile-time verification
//
// Salt integrates the Z3 theorem prover directly into the compiler.
// Preconditions are PROVEN at compile time — not checked at runtime.
// =============================================================================

package main

// The compiler proves that every call to safe_div has b != 0.
// If you call safe_div(x, 0), it's a COMPILE-TIME error.
fn safe_div(a: i32, b: i32) -> i32
    requires(b != 0)
{
    return a / b;
}

// Verified postcondition — Z3 proves the return value is always non-negative.
fn absolute_value(x: i32) -> i32
    ensures(result >= 0)
{
    if x < 0 {
        return -x;
    }
    return x;
}

fn main() -> i32 {
    // These calls pass verification — Z3 can prove the preconditions:
    let result = safe_div(100, 7);      // 7 != 0 ✓
    let abs_val = absolute_value(-42);  // ensures(result >= 0) ✓

    // This would be a COMPILE-TIME ERROR (uncomment to see):
    // let bad = safe_div(100, 0);       // error: violates requires(b != 0)

    if result == 14 && abs_val == 42 {
        println("✓ all contracts verified at compile time");
        return 0;
    }
    return 1;
}
